# aoc2025

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  prelude.hpp
src/utils/: num-str.hpp
